--- a/TrackTime.csproj
+++ b/TrackTime.csproj
@@ -14,6 +14,9 @@
     <Content Include="./sampleQuotes.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="./tracktime.settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
